[package]
name = "uuidtoa"
version = "0.1.1"
authors = ["Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
repository = "https://github.com/jwilm/uuidtoa"
documentation = "https://docs.rs/uuidtoa"
description = "Fast printing for UUID"

[features]
default = []
bench = []

[dependencies]
uuid = ">= 0.5, <= 0.6"
